# qwen-vl-distributed

./: .gitignore  CMakeLists.txt  README.md
cmake/: TorchConfig.cmake
docs/: architecture.md  build_and_run.md  distributed_execution.md  distributed_execution_design.md  distributed_runtime.md  parity_validation.md  weight_mapping.md
include/core/: config.h  hf_config.h  kv_cache.h  rope.h  sharding.h  tensor_utils.h
include/loader/: model_loader.h  pt_weight_loader.h  weight_loader.h
include/model/: attention.h  embedding.h  model_stage.h  moe.h  rms_norm.h  transformer_block.h
include/runtime/: activation_packet.h  kv_packet.h  kv_wire.h  pipeline_stage.h  transport.h
include/vision/: projector.h  vision_encoder.h
python_export/: compare_tensors.py  export_config.py  export_model.py  minimal_hf_config.json  parity_check.py  reduced_export.py  requirements.txt  validate_export.py  validate_vision_manifest.py
python_export/reduced_export_out/: hf_config.json  weights_manifest.json
scripts/: build_and_smoke.sh  check_cuda_env.sh  run_distributed_runtime_local.sh  run_distributed_runtime_stage.sh  run_pipeline.sh  run_pipeline_localhost.sh  run_smoke_cuda.sh  run_stage.sh
src/core/: hf_config.cpp  kv_cache.cpp  rope.cpp  sharding.cpp  tensor_utils.cpp
src/loader/: model_loader.cpp  pt_weight_loader.cpp  torchscript_module_loader.cpp  weight_loader.cpp
src/model/: attention.cpp  embedding.cpp  model_stage.cpp  moe.cpp  transformer_block.cpp
src/runtime/: activation_packet.cpp  kv_packet.cpp  kv_wire.cpp  pipeline_stage.cpp  transport.cpp
src/vision/: projector.cpp  vision_encoder.cpp
stages/distributed_parity_stage/: main.cpp
stages/distributed_pipeline_stage/: main.cpp
stages/distributed_transport_check/: main.cpp
stages/parity_runner/: main.cpp
stages/stage0/: main.cpp
stages/stage0_vision/: main.cpp
stages/stage1/: main.cpp
stages/stage1_blocks/: main.cpp
stages/stage2/: main.cpp
stages/stage2_blocks/: main.cpp
stages/stage3/: main.cpp
stages/stageN_output/: main.cpp
tests/: CMakeLists.txt  distributed_smoke_test.cpp  mini_test.h  parity_test.cpp  test_attention_cuda.cpp  test_embedding_cuda.cpp  test_kv_cache_cuda.cpp  test_kv_wire.cpp  test_model_loader.cpp  test_pt_weight_loader_jit.cpp  test_rope_cuda.cpp  test_smoke_forward.cu  test_tensor_utils.cpp  test_transport_kv.cpp  test_util.h
tests/fixtures/: vision_manifest.json
